Update title and resume iframe source

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Resume ML</title>
+  <title>Resume AIML</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/PrateetMishraUSC/Resume-ML/raw/main/Prateet_Mishra_Resume_ML.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/PrateetMishraUSC/Resume-ML/raw/main/Prateet_Mishra_Resume_AIML.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
